--- a/package.json
+++ b/package.json
@@ -27,5 +27,17 @@
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@cartamd/plugin-code": "^4.0.6",
+		"@cartamd/plugin-emoji": "^4.2.1",
+		"@cartamd/plugin-math": "^4.2.1",
+		"@cartamd/plugin-slash": "^4.1.2",
+		"@cartamd/plugin-tikz": "^4.1.8",
+		"carta-md": "^4.6.3",
+		"isomorphic-dompurify": "^2.16.0",
+		"mdast": "^3.0.0",
+		"unified": "^11.0.5",
+		"unist-util-visit": "^5.0.0"
 	}
 }
